--- a/contribute.html
+++ b/contribute.html
@@ -71,6 +71,7 @@
 					<h1>Grow in 2021</h1>
 					<p>This month we are asking you to help DietPi project. DietPi is an open source product and it is free to use. We are sustained by donations and <b style="color:orange">even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, MicroSD cards etc.), webhosting for Dietpi.com and future development. 
 						<br/><br/> This allows us to continue working on DietPi, make it better with every new update.
+						<img src="images/contribute/coffee.jpg" alt="Coffee" loading="lazy"  width="200">
 						<br/><br/>
 						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" version="1.1" style="shape-rendering:geometricPrecision;text-rendering:geometricPrecision;image-rendering:optimizeQuality;" viewBox="0 0 318 328.75" x="0px" y="0px" fill-rule="evenodd" clip-rule="evenodd"><defs><style type="text/css">
 							.fil0 {fill:black}
@@ -160,7 +161,8 @@
 				<!-- End details for portfolio project 3 -->
 				<!-- Start details for portfolio project 4 -->
 				<div id="slidingdiv4" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/gnustep_1.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/gnustep_1.jpg" alt="GNUstep" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/contribute/test-configurations.jpg" target="_blank" rel="noopener">
+						<img src="images/contribute/test-configurations.jpg" alt="GNUstep" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
@@ -182,7 +184,8 @@
 				<!-- End details for portfolio project 4 -->
 				<!-- Start details for portfolio project 5 -->
 				<div id="slidingdiv5" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/chromium_1.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/chromium_1.jpg" alt="Chromium" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/contribute/improve-website.jpg" target="_blank" rel="noopener">
+						<img src="images/contribute/improve-website.jpg" alt="Chromium" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
@@ -214,7 +217,8 @@
 				<!-- End details for portfolio project 5 -->
 				<!-- Start details for portfolio project 6 -->
 				<div id="slidingdiv6" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/vnc_1.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/vnc_1.jpg" alt="VNC Server" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/contribute/improve-docs.jpg" target="_blank" rel="noopener">
+						<img src="images/contribute/improve-docs.jpg" alt="VNC Server" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
@@ -234,7 +238,8 @@
 				<!-- End details for portfolio project 6 -->
 				<!-- Start details for portfolio project 7 -->
 				<div id="slidingdiv7" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/nomachine_1.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/nomachine_1.jpg" alt="NoMachine" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/contribute/new-features.jpg" target="_blank" rel="noopener">
+						<img src="images/contribute/new-features.jpg" alt="NoMachine" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
@@ -254,7 +259,8 @@
 				<!-- End details for portfolio project 7 -->
 				<!-- Start details for portfolio project 8 -->
 				<div id="slidingdiv8" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/vnc_1.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/vnc_1.jpg" alt="XRDP" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/contribute/new-features.jpg" target="_blank" rel="noopener">
+						<img src="images/contribute/new-features.jpg" alt="XRDP" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
@@ -274,7 +280,8 @@
 				<!-- End details for portfolio project 8 -->
 				<!-- Start details for portfolio project 9 -->
 				<div id="slidingdiv9" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/vnc_1.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/vnc_1.jpg" alt="RealVNC" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/contribute/be-part-community.jpg" target="_blank" rel="noopener">
+						<img src="images/contribute/be-part-community.jpg" alt="RealVNC" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
@@ -294,7 +301,8 @@
 				<!-- End details for portfolio project 9 -->
 				<!-- Start details for portfolio project 10 -->
 				<div id="slidingdiv10" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/kodi_1.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/kodi_1.jpg" alt="Kodi" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/contribute/social-Twitter.jpg" target="_blank" rel="noopener">
+						<img src="images/contribute/social-Twitter.jpg" alt="Kodi" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
@@ -314,7 +322,8 @@
 				<!-- End details for portfolio project 10 -->
 				<!-- Start details for portfolio project 11 -->
 				<div id="slidingdiv11" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/ympd_1.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/ympd_1.jpg" alt="ympd" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/contribute/more-social.jpg" target="_blank" rel="noopener">
+						<img src="images/contribute/more-social.jpg" alt="ympd" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
@@ -366,7 +375,7 @@
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Report">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv4">
-							<img src="images/dietpi-software/gnustep_0.jpg" alt="project 4" loading="lazy">
+							<img src="images/contribute/test-configurations.jpg" alt="project 4" loading="lazy">
 							<i class="more"></i>
 							<h3>Test configurations</h3>
 							<p>Run specific tests</p>
@@ -375,7 +384,7 @@
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Ideas">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv5">
-							<img src="images/dietpi-software/chromium_0.jpg" alt="project 5" loading="lazy">
+							<img src="images/contribute/improve-website.jpg" alt="project 5" loading="lazy">
 							<i class="more"></i>
 							<h3>Improve DietPi website</h3>
 							<p>Help to improve & extend</p>
@@ -385,7 +394,7 @@
 					<!-- Remote desktop -->
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Ideas">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv6">
-							<img src="images/dietpi-software/vnc_0.jpg" alt="project 6" loading="lazy">
+							<img src="images/contribute/improve-docs.jpg" alt="project 6" loading="lazy">
 							<i class="more"></i>
 							<h3>Extend DietPi Docs</h3>
 							<p>Bring more details & samples</p>
@@ -394,7 +403,7 @@
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Ideas">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv7">
-							<img src="images/dietpi-software/nomachine_0.jpg" alt="project 7" loading="lazy">
+							<img src="images/contribute/new-features.jpg" alt="project 7" loading="lazy">
 							<i class="more"></i>
 							<h3>New software titles</h3>
 							<p>Suggest features & software</p>
@@ -403,7 +412,7 @@
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Expand">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv8">
-							<img src="images/dietpi-software/xrdp_0.jpg" alt="project 8" loading="lazy">
+							<img src="images/contribute/expand-code.jpg" alt="project 8" loading="lazy">
 							<i class="more"></i>
 							<h3>Extend DietPi</h3>
 							<p>Bring contributions in GitHub</p>
@@ -412,7 +421,7 @@
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Community">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv9">
-							<img src="images/dietpi-software/realvnc_0.jpg" alt="project 9" loading="lazy">
+							<img src="images/contribute/be-part-community.jpg" alt="project 9" loading="lazy">
 							<i class="more"></i>
 							<h3>Use DietPi Forum</h3>
 							<p>Share & Receive help</p>
@@ -421,7 +430,7 @@
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Community">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv10">
-							<img src="images/dietpi-software/kodi_0.jpg" alt="project 10" loading="lazy">
+							<img src="images/contribute/social-Twitter.jpg" alt="project 10" loading="lazy">
 							<i class="more"></i>
 							<h3>Write about DietPi</h3>
 							<p>Spread the word</p>
@@ -430,7 +439,7 @@
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Community">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv11">
-							<img src="images/dietpi-software/kodi_0.jpg" alt="project 11" loading="lazy">
+							<img src="images/contribute/more-social.jpg" alt="project 11" loading="lazy">
 							<i class="more"></i>
 							<h3>Social media</h3>
 							<p>Share info & love</p>
