--- a/contribute.html
+++ b/contribute.html
@@ -73,9 +73,8 @@
 						<br/><br/> This allows us to continue working on DietPi, make it better with every new update.
 						<img src="images/contribute/coffee.jpg" alt="Coffee" loading="lazy"  width="200">
 						<br/><br/>
-						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" version="1.1" style="shape-rendering:geometricPrecision;text-rendering:geometricPrecision;image-rendering:optimizeQuality;" viewBox="0 0 318 328.75" x="0px" y="0px" fill-rule="evenodd" clip-rule="evenodd"><defs><style type="text/css">
-							.fil0 {fill:black}
-						   </style></defs><g><path class="fil0" d="M60 61c-4,-23 -40,-24 -42,-2 -4,40 65,14 70,82 -8,-46 -89,-34 -88,-81 1,-30 52,-37 60,1z"/><path class="fil0" d="M139 209c5,-92 -82,-81 -84,-159 0,-1 0,-3 0,-4 0,-25 50,-46 113,-46 63,0 114,21 114,46 0,1 0,3 0,4 -2,78 -90,67 -85,159 -19,2 -38,2 -58,0zm29 -204c59,0 107,18 107,41 0,23 -48,41 -107,41 -59,0 -106,-18 -106,-41 0,-23 47,-41 106,-41z"/><path class="fil0" d="M306 175c8,8 12,16 12,25 0,35 -66,63 -148,63 -82,0 -149,-28 -149,-63 0,-9 5,-17 13,-25 -1,3 -1,5 -1,7 0,35 61,64 137,64 75,0 137,-29 137,-64 0,-2 -1,-4 -1,-7z"/><path class="fil0" d="M240 156c4,7 7,15 7,23 0,32 -35,58 -77,58 -43,0 -77,-26 -77,-58 0,-8 2,-16 6,-23 0,2 0,4 0,6 0,33 32,59 71,59 39,0 71,-26 71,-59 0,-2 0,-4 -1,-6z"/><path class="fil0" d="M168 15c48,0 87,14 87,31 0,17 -39,31 -87,31 -48,0 -87,-14 -87,-31 0,-17 39,-31 87,-31zm0 5c41,0 74,12 74,26 0,15 -33,26 -74,26 -41,0 -74,-11 -74,-26 0,-14 33,-26 74,-26z"/><ellipse class="fil0" cx="168" cy="46" rx="55" ry="20"/></g></svg>						<br/><br/>
+						<img src="images/contribute/coffee.jpg" alt="Coffee" loading="lazy"  width="200">
+						<br/><br/>
 						In 2020 we made 8 releases and brought 128 improvements and changes, and fixed 119 bugs. We provided new software titles, support new SBCs and brought many optimizations. 
 						<br/><b>Enable us to grow in 2021 !</b>
 					</p>
@@ -169,10 +168,9 @@
 								<h3>Test configurations</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<p>There is often the case when we need to check a new installation on a specific SBC (Single Board Computer). ExamplesÆ
-								 Allocating time to do such installation provides a big help to us.</p>
-							<div class="project-title"></div>
+							<p>There is often a need to check a new installation on a specific SBC (Single Board Computer). Allocating this time to do such installation provides a big help to the overall project.</p>
 							<br>
+							Examples:
 							<ul>
 								<li>A driver installation for a specific SBC</li>
 								<li>or check of a performance tweak.</li>
@@ -189,28 +187,10 @@
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>Chromium</h3>
+								<h3>Improve DietPi website</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/desktop/#chromium" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i><u>View</u></a></div>
-								<br>
-								<div><span>Pros:</span>Excellent performance, stability and standards support.</div>
-								<div><span>Cons:</span>TBA</div>
-							</div>
-							<div class="project-title"></div>
-							<p><b>Does my device support HW GPU acceleration?</b></p>
-							<ul>
-								<li>RPi 2+ supports native OpenGL and will be configured during installation.</li>
-								<li>Odroid's support OpenGLES and will be configured during installation.</li>
-								<li>Other devices will most likely be limited to software rendering.</li>
-								<li>You can check the status of HW GPU acceleration by accessing the following URL in Chromium <b style="color:orange">chrome://gpu</b>.</li>
-							</ul>
-							<p><b>Launch options?</b></p>
-							<ul>
-								<li>Chromium can be launched from any desktop environment.</li>
-								<li>You can also run Chromium in kiosk mode (no desktop required), by running <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Chromium</b>.</li>
-							</ul>
+							<p><b>If you have web design skills, we are very welcome to receive your help to further expand the website</b></p>
 						</div>
 					</div>
 				</div>
@@ -222,16 +202,10 @@
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>TigerVNC Server</h3>
+								<h3>Expand DietPi Docs</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/remote_desktop/#tigervnc-server" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i><u>View</u></a></div>
-								<br>
-								<div><span>Pros:</span>Efficient, lightweight VNC server</div>
-								<div><span>Cons:</span>TBA</div>
-							</div>
-							<p>Run a Desktop environment on your device that can be accessed remotely, over the network. Great for headless devices.</p>
+							<p>Looking for samples, documentation etc.</p>
 						</div>
 					</div>
 				</div>
@@ -243,37 +217,28 @@
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>NoMachine</h3>
+								<h3>New feature suggestions & Software titles</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/remote_desktop/#nomachine" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i><u>View</u></a></div>
-								<br>
-								<div><span>Pros:</span>Feature rich remote desktop server</div>
-								<div><span>Cons:</span>TBA</div>
-							</div>
-							<p>Remote desktop server with advanced features, such as screen recording. The client also scans for all available NoMachine servers on your network, allowing easy connection and maintenance of your remote desktops.</p>
+							<p>Suggest ways to improve the application.</p>
 						</div>
 					</div>
 				</div>
 				<!-- End details for portfolio project 7 -->
 				<!-- Start details for portfolio project 8 -->
 				<div id="slidingdiv8" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/contribute/new-features.jpg" target="_blank" rel="noopener">
-						<img src="images/contribute/new-features.jpg" alt="XRDP" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/contribute/expand-code.jpg" target="_blank" rel="noopener">
+						<img src="images/contribute/expand-code.jpg" alt="XRDP" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>XRDP</h3>
+								<h3>Extend DietPi</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/remote_desktop/#xrdp" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i><u>View</u></a></div>
-								<br>
-								<div><span>Pros:</span>Supports Windows Remote Desktop Client.</div>
-								<div><span>Cons:</span>TBA</div>
-							</div>
-							<p>Remote desktop supporting the Windows Remote Desktop Client.</p>
+							<p>Bring your contributions to DietPi projects.</p>
+							<p>DietPi project.</p>
+							<p>DietPi Documentation.</p>
+							<p>DietPi Website.</p>
 						</div>
 					</div>
 				</div>
@@ -285,16 +250,10 @@
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>RealVNC</h3>
+								<h3>Use DietPi Forum</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/remote_desktop/#realvnc-server" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i><u>View</u></a></div>
-								<br>
-								<div><span>Pros:</span>N/A</div>
-								<div><span>Cons:</span>N/A</div>
-							</div>
-							<p>Run a Desktop environment on your device that can be accessed remotely, over the network. Great for headless devices, RealVNC also supports shared desktop mode.</p>
+							<p>Discuss with community. First time user no problem. Have a question, waiting for answers from other community members ? Here is the place.</p>
 						</div>
 					</div>
 				</div>
@@ -306,16 +265,10 @@
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>Kodi</h3>
+								<h3>Write about DietPi</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/media/#kodi" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i><u>View</u></a></div>
-								<br>
-								<div><span>Pros:</span>All in one, feature-rich Media Centre</div>
-								<div><span>Cons:</span>TBA</div>
-							</div>
-							<p>The only media centre/player you'll ever need.</p>
+							<p>Spread the word about this project.</p>
 						</div>
 					</div>
 				</div>
@@ -327,22 +280,15 @@
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>ympd</h3>
+								<h3>Social media</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/media/#ympd" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i><u>View</u></a></div>
-								<br>
-								<div><span>Pros:</span>Lightweight, efficient, no frills.</div>
-								<div><span>Cons:</span>Lacks library features, offered by others (e.g.: LMS/Mopidy/O!MPD etc).</div>
-							</div>
-							<p>A lightweight, bare-bones, no frills HiFi music player with a web based interface. Select or search for a song and play it, simple and effective. If you are seeking the highest raw performance audio playback, without bloatware and additional processing, YMPD is highly recommended. YMPD is a front end for MPD.</p>
+							<p>Use different channels.</p>
 						</div>
 					</div>
 				</div>
 				<!-- End details for portfolio project 11 -->
 				<!-- END details for portfolio -->
-
 
 				<div id="portfolio-grid" class="row">
 					<!-- Desktops -->
