ways to contribute

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Start slide -->
 				<div class="da-slide">
-					<h2>DietPi</h2>
-					<h4>Lightweight justice for your single-board computer!</h4>
-					<p>Optimised | Simplified | For everyone</p>
+					<h2>Support DietPi</h2>
+					<h4>Available to everyone, funded by contributors !</h4>
+					<p>DietPi is an open source product and it is free to use. We are sustained by donations and even a small one (as little as the price of a cup of coffee) would help the things move forward, covering the costs</p>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" width="300" alt="DietPi logo" loading="lazy"></div>
 				</div>
 				<!-- End slide -->
