--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 				<div class="da-slide">
 					<h2>Support DietPi</h2>
 					<h4>Available to everyone, funded by contributors !</h4>
-					<p>DietPi is an open source product and it is free to use. We are sustained by donations and even a small one (as little as the price of a cup of coffee) would help the things move forward, covering the costs</p>
+					<p>DietPi is an open source product and it is free to use. We are sustained by donations and even a small one (<b>as little as the price of a cup of coffee</b>) would help the things move forward, covering the costs !</p>
+					<a href="contribute.html" class="da-link" target="_blank" rel="noopener">Learn more</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" width="300" alt="DietPi logo" loading="lazy"></div>
 				</div>
 				<!-- End slide -->
