ways to contribute

--- a/contribute.html
+++ b/contribute.html
@@ -82,6 +82,13 @@
 						<a href="https://www.patreon.com/bePatron?u=12464530" class="button" target="_blank" rel="noopener">Become a Patron</a>
 					</p>
 				</div>
+				<div>
+					<h2>Why contribute to DietPi as an Open Source project ?</h2>
+					<p>You can improve the software you rely on. It's empowering to be able to make changes, even small ones. Whether it’s coding, UI design, writing, or testing, if you’re looking for practice, there’s a task for you on here.</p>
+				</div>				
+				<div>
+					<h2>What it means to contribute ?</h2>
+				</div>				
 				<nav class="nav nav-pills" id="downloadinfo" style="display:none">
 					<button class="nav-link filter" data-filter=".Report">Report / Diagnose issues</button>
 					<button class="nav-link filter" data-filter=".Ideas">Contribute with ideas</button>
@@ -412,7 +419,7 @@
 					</a>
 				</div>
 				<br>
-				<p>&copy; 2020 DietPi created by <a href="https://dietpi.com/" target="_blank" rel="noopener">Daniel Knight</a></p>
+				<p>&copy; 2021 DietPi created by <a href="https://dietpi.com/" target="_blank" rel="noopener">Daniel Knight</a></p>
 				<p>&copy; 2013 Website theme by <a href="https://www.graphberry.com/" target="_blank" rel="noopener">Graphberry</a></p>
 				<p>DietPi web hosting is powered by <a href="https://myvirtualserver.com" target="_blank" rel="noopener">myVirtualserver.com
 				<br><br><img src="images/myvirtualserver_logo.png" alt="myVirtualserver" width="200" loading="lazy"></a></p>
