--- a/contribute.html
+++ b/contribute.html
@@ -82,11 +82,11 @@
 						<a href="https://www.patreon.com/bePatron?u=12464530" class="button" target="_blank" rel="noopener">Become a Patron</a>
 					</p>
 				</div>
-				<div>
+				<div id="title-3" class="title">
 					<h2>Why contribute to DietPi as an Open Source project ?</h2>
-					<p>You can improve the software you rely on. It's empowering to be able to make changes, even small ones. Whether it’s coding, UI design, writing, or testing, if you’re looking for practice, there’s a task for you on here.</p>
+					<p>You can improve the software you rely on. It's empowering to be able to make changes, even small ones. Whether it’s coding, UI design, writing, or testing, if you’re looking for practice, there’s a task for you on here !</p>
 				</div>				
-				<div>
+				<div id="title-4" class="title">
 					<h2>What it means to contribute ?</h2>
 				</div>				
 				<nav class="nav nav-pills" id="downloadinfo" style="display:none">
