ways to contribute

--- a/contribute.html
+++ b/contribute.html
@@ -83,17 +83,8 @@
 					</p>
 				</div>
 				<div id="title-3" class="title">
-<<<<<<< HEAD
 					<h1>Why contribute to DietPi as an Open Source project ?</h1>
-					<p>You can improve the software you rely on. It's empowering to be able to make changes, even small ones: whether it’s coding, UI design, writing, or testing. If you’re looking to help, there’s a task for you on here !</p>
-					<h2 class="medium-text">What it means to contribute ?</h2>
-=======
-					<h2>Why contribute to DietPi as an Open Source project ?</h2>
-					<p>You can improve the software you rely on. It's empowering to be able to make changes, even small ones. Whether it’s coding, UI design, writing, or testing, if you’re looking for practice, there’s a task for you on here !</p>
-				</div>				
-				<div id="title-4" class="title">
-					<h2>What it means to contribute ?</h2>
->>>>>>> master
+					<p>You can improve the software you rely on. It's empowering to be able to make changes, even small ones: whether it’s coding, documentation, testing, web design. If you’re looking to help, there’s something for you on here !</p>
 				</div>				
 				<nav class="nav nav-pills" id="downloadinfo" style="display:none">
 					<button class="nav-link filter" data-filter=".Report">Report / Diagnose issues</button>
