--- a/contribute.html
+++ b/contribute.html
@@ -107,12 +107,8 @@
 							</div>
 							<p>Creating a bug report helps us improve. Providing required info, steps to replicate, and expected vs. actual behaviour you give us valuable info to understand the problem.
 							   <br/><br/>Create now a <a href="https://github.com/MichaIng/DietPi/issues/new?template=bug_report.md" target="_blank" rel="noopener">GitHub issue</a>.
-							   <br/><br/>Security is on top of our list. Please report any security vulnerability shipped with our images or created by our scripts (in /boot/dietpi/). Please find more details in our <a href="https://github.com/MichaIng/DietPi/security/policy" target="_blank" rel="noopener">Security Policy</a>.
+							   <br/>Security is on top of our list. Please report any security vulnerability shipped with our images or created by our scripts (in /boot/dietpi/). Please find more details in our <a href="https://github.com/MichaIng/DietPi/security/policy" target="_blank" rel="noopener">Security Policy</a>.
 							</p>
-							<p>Creating a bug report helps us improve. Providing required info, steps to replicate, and expected vs. actual behaviour you give us valuable info to understand the problem.</p>
-							<p>Create now a <a href="https://github.com/MichaIng/DietPi/issues/new/choose" target="_blank" rel="noopener">GitHub issue</a>.</p>
-							<br>
-							<p>Security is on top of our list. Please report any security vulnerability shipped with our images or created by our scripts (in /boot/dietpi/). Please find more details in our <a href="https://github.com/MichaIng/DietPi/security/policy" target="_blank" rel="noopener">Security Policy</a>.</p>
 						</div>
 					</div>
 				</div>
@@ -171,14 +167,14 @@
 								<h3>Test configurations</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<p>There is often a need to check a new installation on a specific SBC (Single Board Computer). Allocating this time to do such installation provides a big help to the overall project.</p>
-							<br>
-							Examples:
-							<ul>
-								<li>A driver installation for a specific SBC</li>
-								<li>or check of a performance tweak.</li>
-							</ul>
-							Browse <a>DietPi issues on GitHub</a> and find these items.</p>
+							<p>There is often a need to check a new installation on a specific SBC (Single Board Computer), or maybe how DietPi runs with a specific driver. This time to do such installation provides a big help to the overall project.</p>
+							<p>Examples:
+								<ul>
+									<li>A driver installation for a specific SBC</li>
+									<li>or check of a performance tweak.</li>
+								</ul>
+								Browse <a href="https://github.com/MichaIng/DietPi/issues?q=is:open+is:issue+label:%22Help+wanted+:sos:%22+label:%22Testing/testers+required+:arrow_down_small:%22"><i>Help wanted !</i> or <i>Testing Required</i></a> in DietPi issues on GitHub.</p>
+							</p>
 						</div>
 					</div>
 				</div>
@@ -193,7 +189,8 @@
 								<h3>Improve DietPi website</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<p><b>If you have web design skills, we are very welcome to receive your help to further expand the website</b></p>
+							<p>Have you seen something on the website which could be improved ? Do you have web design skills and you would like to help ?</p>
+							<p>We  welcome your help to further expand the website. Please check on <a href="">How to Contribute</a></p>
 						</div>
 					</div>
 				</div>
