--- a/contribute.html
+++ b/contribute.html
@@ -149,6 +149,7 @@
 								<h3>Give help / Answer questions</h3>
 								<span class="show_hide close"></span>
 							</div>
+							<p><b>Core idea:</b> There are many questions on GitHub, and also on Forum. Maybe for some of the issues, we need more insights.</p>
 							<p>Sometimes there are open questions where you could know the answer. 
 								<br/>Or help is needed for a specific installation (e.g. a driver installation for a specific SBC, or a check of a performance tweak etc.)
 								<br/><br/>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> and find these items.
@@ -167,6 +168,7 @@
 								<h3>Test configurations</h3>
 								<span class="show_hide close"></span>
 							</div>
+							<p><b>Core idea:</b> Very similar with investigate issues, but more specific to hardware - either specific SBC models or PCs</p>
 							<p>There is often a need to check a new installation on a specific SBC (Single Board Computer), or maybe how DietPi runs with a specific driver. This time to do such installation provides a big help to the overall project.</p>
 							<p>Examples:
 								<ul>
@@ -189,6 +191,7 @@
 								<h3>Improve DietPi website</h3>
 								<span class="show_hide close"></span>
 							</div>
+							<p><b>Core idea:</b> On the website it's always something to do. Someone with skills in graphics / web design could provide help.</p>
 							<p>Have you seen something on the website which could be improved ? Do you have web design skills and you would like to help ?</p>
 							<p>We  welcome your help to further expand the website. Please check on <a href="">How to Contribute</a></p>
 						</div>
@@ -205,6 +208,7 @@
 								<h3>Expand DietPi Docs</h3>
 								<span class="show_hide close"></span>
 							</div>
+							<p><b>Core idea:</b> This is an ever growing item - the more, the better</p>
 							<p>Looking for samples, documentation etc.</p>
 						</div>
 					</div>
@@ -220,6 +224,7 @@
 								<h3>New feature suggestions & Software titles</h3>
 								<span class="show_hide close"></span>
 							</div>
+							<p><b>Core idea:</b> Let's add links to GitHub add issues (similar with what we have now on DietPi, we should also create on DietPi-Docs, and DietPi-Website)</p>
 							<p>Suggest ways to improve the application.</p>
 						</div>
 					</div>
@@ -235,10 +240,9 @@
 								<h3>Extend DietPi</h3>
 								<span class="show_hide close"></span>
 							</div>
+							<p><b>Core idea:</b> This section is all about the code. Mainly if they have the expertise to help us fixing / enhancing DietPi project</p>
 							<p>Bring your contributions to DietPi projects.</p>
 							<p>DietPi project.</p>
-							<p>DietPi Documentation.</p>
-							<p>DietPi Website.</p>
 						</div>
 					</div>
 				</div>
@@ -253,6 +257,7 @@
 								<h3>Use DietPi Forum</h3>
 								<span class="show_hide close"></span>
 							</div>
+							<p><b>Core idea:</b> Browse, found things to contribute and help</p>
 							<p>Discuss with community. First time user no problem. Have a question, waiting for answers from other community members ? Here is the place.</p>
 						</div>
 					</div>
@@ -268,6 +273,7 @@
 								<h3>Write about DietPi</h3>
 								<span class="show_hide close"></span>
 							</div>
+							<p><b>Core idea:</b> It helps a lot to write about project, experience using DietPi etc. - blog posts, youtube links. Link to reference page</p>
 							<p>Spread the word about this project.</p>
 						</div>
 					</div>
@@ -283,6 +289,7 @@
 								<h3>Social media</h3>
 								<span class="show_hide close"></span>
 							</div>
+							<p><b>Core idea:</b> This could be as simple as like, or redistribute a conversation, article, feature via a Retweet, a Facebook link, a Reddit reference etc.</p>
 							<p>Use different channels.</p>
 						</div>
 					</div>
