--- a/contribute.html
+++ b/contribute.html
@@ -69,7 +69,7 @@
 				</div>
 				<div id="title-2" class="title">
 					<h1>Grow in 2021</h1>
-					<p>This month we are asking you to help DietPi project. DietPi is an open source product and it is free to use. We are sustained by donations and <b style="color:orange">even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, MicroSD cards etc.), webhosting for Dietpi.com and future development. 
+					<p>This month we are asking you to help DietPi project. DietPi is an open source product and it is free to use. We are sustained by donations and <b style="color:#FFA500"> even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, MicroSD cards etc.), webhosting for Dietpi.com and future development. 
 						<br/><br/> This allows us to continue working on DietPi, make it better with every new update.
 						<br/><br/>
 						<img src="images/contribute/coffee.jpg" alt="Coffee" loading="lazy"  width="200">
@@ -313,7 +313,7 @@
 							<img src="images/contribute/investigate.jpg" alt="Investigate / Help" loading="lazy">
 							<i class="more"></i>
 							<h3>Diagnose issues</h3>
-							<p>Investigate & Discover the reasons</p>
+							<p>Investigate & Find reasons</p>
 							<div class="mask"></div>
 						</a>
 					</div>
@@ -322,7 +322,7 @@
 							<img src="images/contribute/question.jpg" alt="project 3" loading="lazy">
 							<i class="more"></i>
 							<h3>Help answering questions</h3>
-							<p>Answer questions, Give feedback</p>
+							<p>Answer questions, give feedback</p>
 							<div class="mask"></div>
 						</a>
 					</div>
