--- a/contribute.html
+++ b/contribute.html
@@ -149,10 +149,9 @@
 								<h3>Give help / Answer questions</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<p><b>Core idea:</b> There are many questions on GitHub, and also on Forum. Maybe for some of the issues, we need more insights.</p>
-							<p>Sometimes there are open questions where you could know the answer. 
-								<br/>Or help is needed for a specific installation (e.g. a driver installation for a specific SBC, or a check of a performance tweak etc.)
-								<br/><br/>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> and find these items.
+							<p>Start a discussion, ask and answer questions. There are many questions on GitHub, and also on Forum for which you have already the answers, or you could provide valuable insights.</p>
+							<p>
+								<br/><br/>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> or open <a href="https://dietpi.com/phpbb" target="_blank" rel="noopener"></a>DietPi Forums</a> and find these items.
 							</p>
 						</div>
 					</div>
@@ -168,14 +167,14 @@
 								<h3>Test configurations</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<p><b>Core idea:</b> Very similar with investigate issues, but more specific to hardware - either specific SBC models or PCs</p>
-							<p>There is often a need to check a new installation on a specific SBC (Single Board Computer), or maybe how DietPi runs with a specific driver. This time to do such installation provides a big help to the overall project.</p>
+							<p>DietPi supports multiple SBCs or PC / VM configurations. Very similar with investigating the issues, but specific to hardware, we need your help to run tests and specific installations for certain SBC models or PCs</p>
+							<p>It is often the need to check a new installation on a new SBC model, or maybe verify DietPi in connection with a specific driver. Doing such installation provides a big help to the overall project.</p>
 							<p>Examples:
 								<ul>
 									<li>A driver installation for a specific SBC</li>
 									<li>or check of a performance tweak.</li>
 								</ul>
-								Browse <a href="https://github.com/MichaIng/DietPi/issues?q=is:open+is:issue+label:%22Help+wanted+:sos:%22+label:%22Testing/testers+required+:arrow_down_small:%22"><i>Help wanted !</i> or <i>Testing Required</i></a> in DietPi issues on GitHub.</p>
+								Browse <a href="https://github.com/MichaIng/DietPi/issues?q=is:open+is:issue+label:%22Help+wanted+:sos:%22+label:%22Testing/testers+required+:arrow_down_small:%22" target="_blank" rel="noopener"><i>Help wanted !</i> or <i>Testing Required</i></a> in DietPi issues on GitHub.</p>
 							</p>
 						</div>
 					</div>
@@ -191,9 +190,9 @@
 								<h3>Improve DietPi website</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<p><b>Core idea:</b> On the website it's always something to do. Someone with skills in graphics / web design could provide help.</p>
+							<p>Web development is a dynamic and challenging field. Someone with skills in graphics and web design could provide a help to the overall online presence of this open source project.</p>
 							<p>Have you seen something on the website which could be improved ? Do you have web design skills and you would like to help ?</p>
-							<p>We  welcome your help to further expand the website. Please check on <a href="">How to Contribute</a></p>
+							<p>We  welcome your help to further expand the website. Please check on <a href="https://github.com/MichaIng/DietPi-Website" target="_blank" rel="noopener">How to Contribute</a></p>
 						</div>
 					</div>
 				</div>
@@ -208,8 +207,8 @@
 								<h3>Expand DietPi Docs</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<p><b>Core idea:</b> This is an ever growing item - the more, the better</p>
-							<p>Looking for samples, documentation etc.</p>
+							<p>This is an ever growing topic. Please join us to update documentation, bringing more examples and details, making the project easy to use and access.</p>
+							<p>Please check on <a href="https://github.com/MichaIng/DietPi-Docs" target="_blank" rel="noopener">How to Contribute</a></p>
 						</div>
 					</div>
 				</div>
@@ -224,8 +223,10 @@
 								<h3>New feature suggestions & Software titles</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<p><b>Core idea:</b> Let's add links to GitHub add issues (similar with what we have now on DietPi, we should also create on DietPi-Docs, and DietPi-Website)</p>
-							<p>Suggest ways to improve the application.</p>
+							<p>Do you like the project and you would like to see new software titles or new configuration features ?</p>
+							<p>Please add your request and ideas using this <a href="https://github.com/MichaIng/DietPi/issues/new/choose" target="_blank" rel="noopener">GitHub form</a>*.
+							   To be able to do it you would need to be logged in with your GitHub account.
+							</p>
 						</div>
 					</div>
 				</div>
@@ -240,9 +241,8 @@
 								<h3>Extend DietPi</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<p><b>Core idea:</b> This section is all about the code. Mainly if they have the expertise to help us fixing / enhancing DietPi project</p>
-							<p>Bring your contributions to DietPi projects.</p>
-							<p>DietPi project.</p>
+							<p>Would you like to fix a bug or help extending the DietPi project ?</p>
+							<p>Please find details here on how you could <a href="https://github.com/MichaIng/DietPi#contributing">contribute</a>.</p>
 						</div>
 					</div>
 				</div>
@@ -257,8 +257,14 @@
 								<h3>Use DietPi Forum</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<p><b>Core idea:</b> Browse, found things to contribute and help</p>
-							<p>Discuss with community. First time user no problem. Have a question, waiting for answers from other community members ? Here is the place.</p>
+							<p>Discuss with community. 
+								<ul> 
+									<li>First time user, and you need help ? No problem !</li>
+									<li>Do you have a question ? Search for answers or create a new topic. One of the community members will help you</li>
+								</ul>
+								<br/>
+								Connect now to the <a href="https://dietpi.com/phpbb/">DietPi Forum</a>.
+							</p>
 						</div>
 					</div>
 				</div>
@@ -273,8 +279,9 @@
 								<h3>Write about DietPi</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<p><b>Core idea:</b> It helps a lot to write about project, experience using DietPi etc. - blog posts, youtube links. Link to reference page</p>
-							<p>Spread the word about this project.</p>
+							<p>Sometimes the easiest way to help, it is to share experience. It helps a lot to write about DietPi project, tell others about it.
+							   We embed relevant blog posts and youtube links in the documentation. There is also a dedicated <a href="https://dietpi.com/docs/references/">Reference page</a></p>
+							<p>Help spreading the word about DietPi project !</p>
 						</div>
 					</div>
 				</div>
@@ -289,8 +296,8 @@
 								<h3>Social media</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<p><b>Core idea:</b> This could be as simple as like, or redistribute a conversation, article, feature via a Retweet, a Facebook link, a Reddit reference etc.</p>
-							<p>Use different channels.</p>
+							<p>This could be as simple as a Twitter Like, or re-share a conversation, article, feature via a Retweet. Or maybe adding a link to a Facebook post, or a Reddit reference.</p>
+							<p>In an age where communication is the key, these social references help DietPi project !</p>
 						</div>
 					</div>
 				</div>
